# discord-bot

./: .gitignore  Cargo.toml
src/: main.rs
src/subs/: mod.rs  xkcd.rs
src/subs/discord/: mod.rs
