[package]
name = "discord-bot"
version = "0.0.1"
authors = ["join3r <join3r@gmail.com>"]
edition = "2018"
license = "CC-BY-NC-ND-4.0"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
failure = "0.1"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = "abort"
incremental = false
overflow-checks = true
